--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "todo-list",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vladimir Tolstikov",
   "license": "ISC",
   "devDependencies": {
     "jest": "^20.0.4",
