--- a/package.json
+++ b/package.json
@@ -4,25 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server"
   },
   "keywords": [],
   "author": "Vladimir Tolstikov",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "jest": "^20.0.4",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.5"
   },
   "dependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-css-to-js": "0.0.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "fela": "^4.3.5",
     "lodash": "^4.17.4",
     "mobx": "^3.1.11",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-fela": "^4.3.5"
   }
 }
