--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
   "author": "Vladimir Tolstikov",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "jest": "^20.0.4",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.5"
-  },
-  "dependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-css-to-js": "0.0.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "fela": "^4.3.5",
+    "babel-preset-es2015": "^6.24.1",
+    "jest": "^20.0.4",
+    "webpack": "^1.13.2",
+    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-dev-server": "^1.16.5"
+  },
+  "dependencies": {
     "lodash": "^4.17.4",
     "mobx": "^3.1.11",
     "react": "^0.14.9",
     "react-dom": "^0.14.9",
-    "react-fela": "^4.3.5"
+    "styled-components": "^2.0.0"
   }
 }
