--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.4.1",
     "babel-plugin-css-to-js": "0.0.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.0.1",
     "jest": "^20.0.4",
+    "jest-enzyme": "^3.2.0",
     "webpack": "^1.13.2",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^1.16.5"
