--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "babel": "^6.23.0",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^6.4.1",
     "babel-plugin-css-to-js": "0.0.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.1",
     "jest": "^20.0.4",
     "jest-enzyme": "^3.2.0",
+    "react-addons-test-utils": "^0.14.8",
     "webpack": "^1.13.2",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^1.16.5"
@@ -32,5 +35,8 @@
     "react": "^0.14.9",
     "react-dom": "^0.14.9",
     "styled-components": "^2.0.0"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js"
   }
 }
