--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^20.0.4",
     "jest-enzyme": "^3.2.0",
     "react-addons-test-utils": "^0.14.8",
+    "sinon": "^2.3.2",
     "webpack": "^1.13.2",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^1.16.5"
