--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.1",
+    "flow-bin": "^0.47.0",
     "jest": "^20.0.4",
     "jest-enzyme": "^3.2.0",
     "react-addons-test-utils": "^0.14.8",
