--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.1",
+    "file-loader": "^1.1.5",
     "flow-bin": "^0.47.0",
     "jest": "^20.0.4",
     "jest-enzyme": "^3.2.0",
     "react-addons-test-utils": "^0.14.8",
     "sinon": "^2.3.2",
+    "url-loader": "^0.6.2",
     "webpack": "^1.13.2",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^1.16.5"
